--- a/src/Header.css
+++ b/src/Header.css
@@ -1,5 +1,6 @@
 .App-header {
-  background-color: #222;
+  background-color: #f87ef3;
+  background-image: linear-gradient(to bottom left, #f87ef3, #00e1d0);
   height: 150px;
   padding: 20px;
   color: white;
