--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,29 @@ body {
 .weather-icon {
   height: 100px;
 }
+
+input {
+  height: 1.5rem;
+}
+
+::placeholder {
+  color: gray;
+  text-align: center;
+  font-size: 0.75rem;
+}
+
+button {
+  height: 2rem;
+  color: white;
+  background-color: transparent;
+  border: 3px solid white;
+  text-align: center;
+  font-size: 0.75rem;
+  border-radius: 4px;
+}
+
+button:hover {
+  background-color: white;
+  color: #74b8df;
+  font-weight: bold;
+}
