--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -17,7 +17,7 @@
   font-size: large;
 }
 
-form {
+.welcome-form{
   width: 50%;
   margin: 0 auto;
   display: flex;
@@ -25,7 +25,15 @@ form {
   justify-content: center;
 }
 
-button {
+.welcome-form input {
+  padding-left: 10px;
+}
+
+.welcome-form button {
   margin: 10px auto;
   width: 50%;
+}
+
+.welcome-form ::placeholder {
+  text-align: center;
 }
