Change font colors to fix contrast ratio

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,36 @@
-.Welcome {
+input {
+  height: 1.5rem;
+}
+
+::placeholder {
+  color: lightgray;
+  font-size: 0.75rem;
+  font-family: 'Mitr', sans-serif;
+}
+
+button {
+  background-color: transparent;
+  border: 3px solid #024856;
+  border-radius: 4px;
+  color: #024856;
+  font-size: 1.5rem;
+  font-family: 'Mitr', sans-serif;
+  height: 3rem;
   text-align: center;
 }
 
-.Welcome {
-  height: 100vh;
+button:hover {
+  background-color: #024856;
+  color: #74B8DF;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+button:disabled {
+  background-color: transparent;
+  border: 3px solid #024856;
+  color: #024856;
+  font-weight: normal;
+  font-size: 1.5rem;
 }
 
