--- a/src/CurrentWeather.css
+++ b/src/CurrentWeather.css
@@ -1,63 +1,81 @@
+.current-weather {
+  grid-row: 2/3;
+  grid-column: 1/2;
+  text-align: center;
+  width: 40rem;
+  border: 1px dotted blue;
+}
+
 .current-city-title,
 .current-temp-display,
 .fahr-display,
 .current-condition,
 .display-wrapper,
 .summary-display {
-  font-family: 'Syncopate', sans-serif;
+  font-family: 'Mitr', sans-serif;
 }
 
 
 .current-city-title {
-  color: #3A6F7B;
-  font-size: 1.5em;
-  margin-left: 1em;
+  color: #024856;
+  font-size: 2rem;
+  font-weight: 500;
+  margin-bottom: 5px;
 }
 
 .current-temp-display {
-  color: #3A6F7B;
-  font-size: 1em;
-  margin-bottom: 0;
+  color: #024856;
+  font-size: 1rem;
+  margin: -75px auto;
 }
 
 .fahr-display {
-  -webkit-text-stroke: 6px #3A6F7B;
+  -webkit-text-stroke: 6px #024856;
   color: #00E1D0;
-  font-size: 20em;
+  font-size: 20rem;
   margin-left: 20px;
 }
 
 .last-updated {
-  margin-left: 11em;
+  margin: 0;
 }
 
 .current-condition {
-  color: #3A6F7B;
+  color: #024856;
+  font-weight: 500;
   margin-right: 20px;
 }
 
 .display-wrapper {
-  color: #3A6F7B;
+  color: #024856;
   display: flex;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: bold;
 }
 
 .icon-container {
   display: flex;
   align-items: center;
-  width: 35%;
+  width: 50%;
   margin-left: 25px;
   margin-right: 40px;
 }
 
 .hi-lo-display {
+  color: #024856;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.daily-hi-lo {
+  margin: 0 auto;
+  font-size: 1rem;
+  font-weight: normal;
 }
 
 .summary-display {
-  margin-left: 25px;
-  color: #3A6F7B;
+  color: #024856;
+  font-size: 1.25rem;
 }
 
