--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -1,26 +1,39 @@
+// $dark-teal: #024856;
+// $white: #FFF;
+// $body-font: 'Mitr', sans-serif;
+// $heading-font: 'Lobster', cursive;
+
+.Welcome {
+  height: 100vh;
+  text-align: center;
+  width: 100vw;
+}
+
 .welcome-container {
   background-color: #F87EF3;
   background-image: linear-gradient(to bottom left, #F87EF3, #00E1D0);
-  color: white;
+  color: #024856;
   display: flex;
   flex-direction: column;
   height: 100vh;
   justify-content: center;
   padding: 20px;
+  width: 100vw;
 }
 
 .welcome-title {
-  -webkit-text-stroke: 2px #3A6F7B;
-  color: #FFF;
+  color: #024856;
   font-size: 8em;
   font-family: 'Lobster', cursive;
   margin-top: 25px;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 .welcome-intro {
-  font-size: 1em;
-  font-family: 'Syncopate', sans-serif;
+  font-size: 1.5em;
+  font-family: 'Mitr', sans-serif;
+  text-align: center;
 }
 
 .welcome-form {
@@ -32,9 +45,9 @@
 }
 
 .welcome-form input {
-  font-size: 1em;
-  font-family: 'Syncopate', sans-serif;
-  height: 2rem;
+  font-size: 1.25rem;
+  font-family: 'Mitr', sans-serif;
+  height: 2.5rem;
   margin: 1em;
   padding-left: 10px;
 }
@@ -46,4 +59,6 @@
 
 .welcome-form ::placeholder {
   text-align: center;
+  font-family: 'Mitr', sans-serif;
+  font-size: 1.25rem;
 }
