--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.app {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 10% 70% 20%;
+  width: 100vw;
+}
+
 input {
   height: 1.5rem;
 }
@@ -15,7 +22,7 @@ button {
   color: #024856;
   font-size: 1.5rem;
   font-family: 'Mitr', sans-serif;
-  height: 3rem;
+  height: 2.5rem;
   text-align: center;
 }
 
