--- a/src/SevenHour.css
+++ b/src/SevenHour.css
@@ -1,16 +1,20 @@
 .seven-hour {
   grid-column: 2/3;
   grid-row: 2/3; 
-  width: 250px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center; 
+  border: 1px dotted blue;
+  width: 20rem;
+  height: 55rem;
 }
 
 .seven-hour-title {
-  font-family: 'Syncopate', sans-serif;
+  font-family: 'Mitr', sans-serif;
+  color: #024856;
+  font-weight: 500;
 }
 
 .seven-hour-container {
