--- a/src/TenDay.css
+++ b/src/TenDay.css
@@ -1,11 +1,24 @@
 .ten-day {
   grid-row: 3/4;
   grid-column: 1/end;
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: 25px auto;
+  width: 75rem;
+  height: 60rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center; 
+  border: 1px dotted blue;
 }
 
 .ten-day-title {
-  font-family: 'Syncopate', sans-serif;
+  font-family: 'Mitr', sans-serif;
+  color: #024856;
+  font-weight: 500;
+}
+
+.ten-day-container {
+  display: grid;
+  grid-template-columns: (repeat 10 , 1fr);
+  grid-template-rows: auto;
 }
