Refactor layout to be cleaner and more organized

--- a/src/assets/CurrentWeather.css
+++ b/src/assets/CurrentWeather.css
@@ -2,10 +2,9 @@
   grid-row: 2/3;
   grid-column: 1/2;
   text-align: center;
-  width: 40rem;
+  width: 45rem;
   height: 35rem;
-  border: 1px dotted blue;
-  margin-left: 5em;
+  margin: 2em auto;
 }
 
 .current-city-title,
@@ -53,14 +52,13 @@
   display: flex;
   font-size: 1rem;
   font-weight: bold;
+  justify-content: space-around;
 }
 
 .icon-container {
   display: flex;
   align-items: center;
-  width: 50%;
-  margin-left: 25px;
-  margin-right: 40px;
+  width: 5%;
 }
 
 .hi-lo-display {
