--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -1,7 +1,7 @@
 .app {
   display: grid;
-  grid-template-columns: 70% 30%;
-  grid-template-rows: 10% 70% 20%;
+  grid-template-columns: auto;
+  grid-template-rows: 12em 35em 15em 35em;
   width: 100vw;
 }
 
