--- a/src/assets/Header.css
+++ b/src/assets/Header.css
@@ -2,7 +2,7 @@
   background-color: #f87ef3;
   background-image: linear-gradient(to bottom left, #f87ef3, #00e1d0);
   color: white;
-  height: 160px;
+  height: 200px;
   padding: 20px;
   text-align: center;
   grid-row: 1/2;
@@ -29,12 +29,13 @@
   padding-left: 10px;
   width: 60%;
   height: 2rem;
+  margin: auto;
 }
 
 .header-form button {
   font-size: 1rem;
-  margin-left: 10px;
   width: 20%;
+  margin: 1em auto;
 }
 
 .header-form ::placeholder {
