--- a/src/assets/SevenHour.css
+++ b/src/assets/SevenHour.css
@@ -1,24 +1,26 @@
 .seven-hour {
-  grid-column: 2/3;
-  grid-row: 2/3; 
+  grid-column: 1/3;
+  grid-row: 3/4;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center; 
-  border: 1px dotted blue;
-  width: 20rem;
-  height: 55rem;
+  width: 115rem;
+  height: 15rem;
+  margin: auto;
 }
 
 .seven-hour-title {
   font-family: 'Mitr', sans-serif;
   color: #024856;
   font-weight: 500;
+  font-size: 2em;
 }
 
 .seven-hour-container {
   display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: (repeat 7, 1fr);
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-column-gap: 1em;
 }
