--- a/src/TenDay.css
+++ b/src/TenDay.css
@@ -1,11 +1,26 @@
 .ten-day {
-  grid-row: 3/4;
+  grid-row: 4/5;
   grid-column: 1/end;
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: 25px auto;
+  width: 85rem;
+  height: 30rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto;
 }
 
 .ten-day-title {
-  font-family: 'Syncopate', sans-serif;
+  font-family: 'Mitr', sans-serif;
+  color: #024856;
+  font-weight: 500;
+  font-size: 2em;
+}
+
+.ten-day-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-column-gap: 10px;
 }
