--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -3,10 +3,11 @@
 // $body-font: 'Mitr', sans-serif;
 // $heading-font: 'Lobster', cursive;
 
-.Welcome {
+.welcome {
   height: 100vh;
   text-align: center;
   width: 100vw;
+  overflow: hidden;
 }
 
 .welcome-container {
@@ -55,6 +56,7 @@
 .welcome-form button {
   margin: 10px auto;
   width: 50%;
+  height: 2em;
 }
 
 .welcome-form ::placeholder {
