--- a/src/assets/SevenHour.css
+++ b/src/assets/SevenHour.css
@@ -20,7 +20,7 @@
 
 .seven-hour-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(7, 1fr);
   grid-template-rows: auto;
   grid-column-gap: 1em;
 }
